# QtOSMR

./: .gitignore  CMakeLists.txt  MapMarker.qml  MapView.qml  main.cpp  resources.qrc
